--- a/aplication/pubspec.yaml
+++ b/aplication/pubspec.yaml
@@ -1,8 +1,6 @@
-name: aplication
+name: application
 description: "A new Flutter project."
-# The following line prevents the package from being accidentally published to
-# pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: 'none' 
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -31,6 +29,20 @@ dependencies:
   flutter:
     sdk: flutter
 
+  flutter_background_service: ^5.0.5
+  background_json_parser: ^1.0.0
+  flutter_local_notifications: ^8.2.0
+  timer_builder: ^2.0.0
+  workmanager: ^0.5.2
+  path_provider: ^2.0.2
+  device_info_plus: ^10.1.0
+  flutter_timezone: ^1.0.8
+  timezone: ^0.7.0
+
+
+
+
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -45,7 +57,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.0
+  flutter_lints: ^4.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -86,5 +98,3 @@ flutter:
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
