--- a/aplication/pubspec.yaml
+++ b/aplication/pubspec.yaml
@@ -28,21 +28,30 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  
+  rxdart: ^0.27.2
 
   flutter_background_service: ^5.0.5
+  flutter_local_notifications: ^17.1.2
+  flutter_local_notifications_platform_interface: ^7.1.0
+  flutter_timezone: ^1.0.8
   background_json_parser: ^1.0.0
-  flutter_local_notifications: ^8.2.0
-  timer_builder: ^2.0.0
   workmanager: ^0.5.2
   path_provider: ^2.0.2
   device_info_plus: ^10.1.0
-  flutter_timezone: ^1.0.8
-  timezone: ^0.7.0
-
-
-
-
-
+  timer_builder: ^2.0.0
+  timezone: 0.9.3
+  leak_tracker: 10.0.0 
+  leak_tracker_flutter_testing: 2.0.1
+  leak_tracker_testing: 2.0.1 
+  material_color_utilities: 0.8.0
+  meta: 1.11.0
+  test_api: 0.6.1
+  vm_service: 13.0.0
+  url_launcher: ^6.1.10
+  flutter_js: ^0.8.0
+  # permission_handler: ^9.1.0
+  typed_data: ^1.3.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -74,6 +83,11 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+
+  assets:
+    - assets/jogos.json
+    - assets/teste.mjs
+    - assets/teste.txt
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
