--- a/aplication/pubspec.yaml
+++ b/aplication/pubspec.yaml
@@ -41,13 +41,13 @@ dependencies:
   device_info_plus: ^10.1.0
   timer_builder: ^2.0.0
   timezone: 0.9.3
-  leak_tracker: 10.0.0 
-  leak_tracker_flutter_testing: 2.0.1
-  leak_tracker_testing: 2.0.1 
+  leak_tracker: ^10.0.4 
+  leak_tracker_flutter_testing: ^3.0.3
+  leak_tracker_testing: ^3.0.1 
   material_color_utilities: 0.8.0
-  meta: 1.11.0
-  test_api: 0.6.1
-  vm_service: 13.0.0
+  meta: ^1.12.0
+  test_api: ^0.7.0
+  vm_service: ^14.2.1
   url_launcher: ^6.1.10
   flutter_js: ^0.8.0
   # permission_handler: ^9.1.0
